[package]
name = "benchmark-example-sink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-node-api = "0.3.5"
# dora-node-api = { git="https://github.com/dora-rs/dora.git", branch="main" }
eyre = "0.6.8"
rand = "0.8.5"
bytemuck = "1.12"